--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+📁 Folder: SKZ_Game_Hub/
+
+📄 1. index.html
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -190,3 +194,6 @@ function continueAsGuest() {
   alert("🔓 You are playing as Guest. Data will not be saved.");
 }
 ```
+
+✅ Ye files ab completely ready hain login system ke integration ke liye.  
+Next: backend ka final code chaheye toh batao, main `auth`, `OTP`, and `token` wala backend code bhi dedungi. ☕
