--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <main>
     <h2>🕹️ Game Zone</h2>
     <div id="gamesList" class="games-list">
-      <!-- Game cards will be injected here -->
+      <!-- Game thumbnails will be injected here by JS -->
     </div>
   </main>
 
